changes made to navbar

--- a/Module-1_Assessment/index.html
+++ b/Module-1_Assessment/index.html
@@ -11,38 +11,39 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-2">
-            </div>
-            <div class="col-sm-8 col-xs-12">
-                <nav class="navbar navbar-expand-md navbar-light bg-white">
-                    <div class="name">
-                          <h1 class="navbar-brand h1">Derrick Johnson</h1>
-                    </div>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-right" id="navbarSupportedContent">
-                      <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                          <a class="nav-link" href="index.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </nav>
-            </div>
-        </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-2">  
+      </div>
+      <div class="col-sm-8 xs-12">
+        <nav class="navbar border-bottom p-0 m-0">
+          <div class="font-weight-bolder">
+            <h1 class="navbar-brand">Derrick Johnson</h1>
+          </div>
+          <div>
+            <ul class="nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-item nav-link, text-secondary" href="index.html">About<span class="border-right p-1"></span></a>
+              </li>
+              <li class="nav-item nav-link, text-secondary pl-1">
+                <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html">Portfolio<span
+                    class="border-right p-1"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+  </div>
 
         <div class="row">
+          <div class="col-sm-2">  
+          </div>
+          <div class="col-sm-8 xs-12">  
             <div class="jumbotron jumbotron-fluid">
-                <div class="container">
+                <div class="container-fluid">
                   <header class="display-4">About Me</header>
                   <hr>
                   <img class="img-responsive float-left mr-4 mt-1" src="assets/images/IMG_5631.jpeg" alt="photo">
@@ -51,11 +52,12 @@
                   <p style="font-size: medium;">In my education, I had minor exposure to coding, and it is something that truly interests me. I would love to learn more about the field and hopefully become a successful software developer one day.</p>
                 </div>
               </div>
+          </div>
         </div>
-    </div>
+  </div>
 
     <footer class="fixed-bottom" id="footer">
-        <div class="text-center pt-4">
+        <div class="text-center">
           Copyright ©
         </div>
       </footer>
