--- a/Module-1_Assessment/contact.html
+++ b/Module-1_Assessment/contact.html
@@ -1,1 +1,74 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3">  
+        </div>
+        <div class="col-sm-6 xs-12">
+          <nav class="navbar border-bottom p-0 m-0">
+            <div class="font-weight-bolder">
+              <h1 class="navbar-brand">Derrick Johnson</h1>
+            </div>
+            <div>
+              <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-item nav-link, text-secondary" href="index.html">About<span class="border-right p-1"></span></a>
+                </li>
+                <li class="nav-item nav-link, text-secondary pl-1">
+                  <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html">Portfolio<span
+                      class="border-right p-1"></span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+    </div>
+
+        <div class="row">
+            <div class="col-sm-3">
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <header class="display-4">Contact</header>
+                    </div>
+                    <hr>
+                        <div class="col">
+                        <div class="form-group">
+                            <label for="input1">Name</label>
+                            <input type="text" class="form-control" id="nameInput" placeholder="John Smith">
+                        </div>
+                        <div class="form-group">
+                            <label for="input2">Email</label>
+                            <input type="email" class="form-control" id="emailInput" placeholder="example@gmail.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="input3">Message</label>
+                            <textarea class="form-control" id="message" rows="6"></textarea>
+                        </div>
+                        <button type="button" class="btn">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <footer class="fixed-bottom" id="footer">
+        <div class="text-center">
+          Copyright ©
+        </div>
+    </footer>
+</body>
