initial portfolio info

--- a/Module-1_Assessment/portfolio.html
+++ b/Module-1_Assessment/portfolio.html
@@ -1,1 +1,111 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3">  
+        </div>
+        <div class="col-sm-6 xs-12">
+          <nav class="navbar border-bottom p-0 m-0">
+            <div class="font-weight-bolder">
+              <h1 class="navbar-brand">Derrick Johnson</h1>
+            </div>
+            <div>
+              <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-item nav-link, text-secondary" href="index.html">About<span class="border-right p-1"></span></a>
+                </li>
+                <li class="nav-item nav-link, text-secondary pl-1">
+                  <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html">Portfolio<span
+                      class="border-right p-1"></span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+    </div>
+
+        <div class="row">
+            <div class="col-sm-3">
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <header class="display-4">Portfolio</header>
+                    </div>
+                    <hr class="m-3"></hr>
+                    <div class="row">
+                        <div class="col-4">
+                          <div class="card" style="width: 100%; margin-left: 10%; margin-bottom: 20%">
+                            <img src="assets/images/img1.jpg" class="card-img-top img-responsive" alt="..." style="height: 100%;">
+                            <div class="card-img-overlay">
+                              <p class="card-text"style="position: absolute; bottom: 8%; left: 0%; width: 100%; padding: 2%; background-color: #4aaaa5; text-align: center; font-family: 'Georgia', Times, Times New Roman, serif; color: white; font-size: small;">Hangman</p>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="col-4">
+                            <div class="card" style="width: 100%;">
+                              <img src="assets/images/img2.jpg" class="card-img-top img-responsive" alt="..." style="height: 100%;">
+                              <div class="card-img-overlay">
+                                <p class="card-text"style="position: absolute; bottom: 8%; left: 0%; width: 100%; padding: 2%; background-color: #4aaaa5; text-align: center; font-family: 'Georgia', Times, Times New Roman, serif; color: white; font-size: small;">RPG Game</p>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-4">
+                          <div class="card" style="width: 100%; margin-left: 10%; margin-bottom: 20%">
+                            <img src="assets/images/img3.jpg" class="card-img-top img-responsive" alt="..." style="height: 100%;">
+                            <div class="card-img-overlay">
+                              <p class="card-text"style="position: absolute; bottom: 8%; left: 0%; width: 100%; padding: 2%; background-color: #4aaaa5; text-align: center; font-family: 'Georgia', Times, Times New Roman, serif; color: white; font-size: small;">Trivia Game</p>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="col-4">
+                            <div class="card" style="width: 100%;">
+                              <img src="assets/images/img4.jpg" class="card-img-top img-responsive" alt="..." style="height: 100%;">
+                              <div class="card-img-overlay">
+                                <p class="card-text"style="position: absolute; bottom: 8%; left: 0%; width: 100%; padding: 2%; background-color: #4aaaa5; text-align: center; font-family: 'Georgia', Times, Times New Roman, serif; color: white; font-size: small;">Rutgers Info Widget</p>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-4">
+                          <div class="card" style="width: 100%; margin-left: 10%;">
+                            <img src="assets/images/img5.jpg" class="card-img-top img-responsive" alt="..." style="height: 100%;">
+                            <div class="card-img-overlay">
+                              <p class="card-text"style="position: absolute; bottom: 8%; left: 0%; width: 100%; padding: 2%; background-color: #4aaaa5; text-align: center; font-family: 'Georgia', Times, Times New Roman, serif; color: white; font-size: small;">Rock Paper Scissors</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <footer class="fixed-bottom" id="footer">
+        <div class="text-center">
+          Copyright ©
+        </div>
+    </footer>
+</body>
+
+</html>
