--- a/Module-1_Assessment/contact.html
+++ b/Module-1_Assessment/contact.html
@@ -12,25 +12,25 @@
 
 <body>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row" id="top">
         <div class="col-sm-3">  
         </div>
         <div class="col-sm-6 xs-12">
           <nav class="navbar border-bottom p-0 m-0">
             <div class="font-weight-bolder">
-              <h1 class="navbar-brand">Derrick Johnson</h1>
+              <h1 class="navbar-brand" style="background-color: #4aaaa5; color: white; font-family: 'Georgia', Times, Times New Roman, serif; padding: 10%; font-size: x-large;">Derrick Johnson</h1>
             </div>
             <div>
               <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <a class="nav-item nav-link, text-secondary" href="index.html">About<span class="border-right p-1"></span></a>
+                  <a class="nav-item nav-link, text-secondary" href="index.html" style="color: #777777;">About<span class="border-right p-1"></span></a>
                 </li>
                 <li class="nav-item nav-link, text-secondary pl-1">
-                  <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html">Portfolio<span
+                  <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html" style="color: #777777;">Portfolio<span
                       class="border-right p-1"></span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html">Contact</a>
+                  <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html" style="color: #777777;">Contact</a>
                 </li>
               </ul>
             </div>
@@ -42,25 +42,25 @@
             <div class="col-sm-3">
             </div>
             <div class="col-sm-6 col-xs-12">
-                <div class="jumbotron jumbotron-fluid">
+                <div class="jumbotron jumbotron-fluid" id="jumbo">
                     <div class="container">
-                        <header class="display-4">Contact</header>
+                        <header class="display-4" style="font-family: 'Georgia', Times, Times New Roman, serif; color: #4aaaa5; font-size: xx-large;">Contact</header>
                     </div>
-                    <hr>
+                    <hr class="m-3" style="color: #dddddd;">
                         <div class="col">
                         <div class="form-group">
-                            <label for="input1">Name</label>
+                            <label for="input1" style="font-size: medium; color: #777777; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;">Name</label>
                             <input type="text" class="form-control" id="nameInput" placeholder="John Smith">
                         </div>
                         <div class="form-group">
-                            <label for="input2">Email</label>
+                            <label for="input2" style="font-size: medium; color: #777777; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;">Email</label>
                             <input type="email" class="form-control" id="emailInput" placeholder="example@gmail.com">
                         </div>
                         <div class="form-group">
-                            <label for="input3">Message</label>
+                            <label for="input3" style="font-size: medium; color: #777777; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;">Message</label>
                             <textarea class="form-control" id="message" rows="6"></textarea>
                         </div>
-                        <button type="button" class="btn">Submit</button>
+                        <button type="button" style="font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; background-color: #4aaaa5; color: #ffffff; padding-left: 5%; padding-right: 5%;">Submit</button>
                     </div>
                 </div>
             </div>
@@ -72,3 +72,5 @@
         </div>
     </footer>
 </body>
+
+</html>
