--- a/Module-1_Assessment/index.html
+++ b/Module-1_Assessment/index.html
@@ -12,44 +12,44 @@
 
 <body>
   <div class="container-fluid">
-    <div class="row">
+    <div class="row" id="top">
       <div class="col-sm-2">  
       </div>
       <div class="col-sm-8 xs-12">
         <nav class="navbar border-bottom p-0 m-0">
           <div class="font-weight-bolder">
-            <h1 class="navbar-brand">Derrick Johnson</h1>
+            <h1 class="navbar-brand" style="background-color: #4aaaa5; color: white; font-family: 'Georgia', Times, Times New Roman, serif; padding: 10%; font-size: x-large;">Derrick Johnson</h1>
           </div>
           <div>
             <ul class="nav justify-content-end">
               <li class="nav-item">
-                <a class="nav-item nav-link, text-secondary" href="index.html">About<span class="border-right p-1"></span></a>
+                <a class="nav-item nav-link, text-secondary" href="index.html" style="color: #777777;">About<span class="border-right p-1"></span></a>
               </li>
               <li class="nav-item nav-link, text-secondary pl-1">
-                <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html">Portfolio<span
+                <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html" style="color: #777777;">Portfolio<span
                     class="border-right p-1"></span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html">Contact</a>
+                <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html" style="color: #777777;">Contact</a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
-  </div>
+    </div>
 
         <div class="row">
           <div class="col-sm-2">  
           </div>
           <div class="col-sm-8 xs-12">  
-            <div class="jumbotron jumbotron-fluid">
+            <div class="jumbotron jumbotron-fluid" id="jumbo">
                 <div class="container-fluid">
-                  <header class="display-4">About Me</header>
-                  <hr>
+                  <header class="display-4" style="font-family: 'Georgia', Times, Times New Roman, serif; color: #4aaaa5; font-size: xx-large;">About Me</header>
+                  <hr style="color: #dddddd;">
                   <img class="img-responsive float-left mr-4 mt-1" src="assets/images/IMG_5631.jpeg" alt="photo">
-                  <p style="font-size: medium;">My name is Derrick Johnson. I just finished up my undergraduate degree in May 2020 from Morningside College in Sioux City, Iowa. I graduated with a Bachelor's degree, double major in engineering physics and mathematics.</p>
-                  <p style="font-size: medium;">During my time at school, I was a part of the Morningside baseball program. I have played baseball my entire life, and it was a dream of mine to be able to play at the collegiate level. Now that I have finished school and playing baseball, I am looking for a job that I will enjoy.</p>
-                  <p style="font-size: medium;">In my education, I had minor exposure to coding, and it is something that truly interests me. I would love to learn more about the field and hopefully become a successful software developer one day.</p>
+                  <p style="font-size: medium; color: #777777; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;">My name is Derrick Johnson. I just finished up my undergraduate degree in May 2020 from Morningside College in Sioux City, Iowa. I graduated with a Bachelor's degree, double major in engineering physics and mathematics.</p>
+                  <p style="font-size: medium; color: #777777; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;">During my time at school, I was a part of the Morningside baseball program. I have played baseball my entire life, and it was a dream of mine to be able to play at the collegiate level. Now that I have finished school and playing baseball, I am looking for a job that I will enjoy.</p>
+                  <p style="font-size: medium; color: #777777; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;">In my education, I had minor exposure to coding, and it is something that truly interests me. I would love to learn more about the field and hopefully become a successful software developer one day.</p>
                 </div>
               </div>
           </div>
@@ -62,3 +62,5 @@
         </div>
       </footer>
 </body>
+
+</html>
