changes to adjust colors/fonts

--- a/Module-1_Assessment/portfolio.html
+++ b/Module-1_Assessment/portfolio.html
@@ -12,29 +12,29 @@
 
 <body>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row" id="top">
         <div class="col-sm-3">  
         </div>
         <div class="col-sm-6 xs-12">
-          <nav class="navbar border-bottom p-0 m-0">
-            <div class="font-weight-bolder">
-              <h1 class="navbar-brand">Derrick Johnson</h1>
-            </div>
-            <div>
-              <ul class="nav justify-content-end">
-                <li class="nav-item">
-                  <a class="nav-item nav-link, text-secondary" href="index.html">About<span class="border-right p-1"></span></a>
-                </li>
-                <li class="nav-item nav-link, text-secondary pl-1">
-                  <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html">Portfolio<span
-                      class="border-right p-1"></span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+            <nav class="navbar border-bottom p-0 m-0">
+                <div class="font-weight-bolder">
+                  <h1 class="navbar-brand" style="background-color: #4aaaa5; color: white; font-family: 'Georgia', Times, Times New Roman, serif; padding: 10%; font-size: x-large;">Derrick Johnson</h1>
+                </div>
+                <div>
+                  <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-item nav-link, text-secondary" href="index.html" style="color: #777777;">About<span class="border-right p-1"></span></a>
+                    </li>
+                    <li class="nav-item nav-link, text-secondary pl-1">
+                      <a class="nav-item nav-link, text-secondary pl-1" href="portfolio.html" style="color: #777777;">Portfolio<span
+                          class="border-right p-1"></span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-item nav-link, text-secondary pl-2 pr-3" href="contact.html" style="color: #777777;">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
         </div>
     </div>
 
@@ -42,11 +42,11 @@
             <div class="col-sm-3">
             </div>
             <div class="col-sm-6 col-xs-12">
-                <div class="jumbotron jumbotron-fluid">
+                <div class="jumbotron jumbotron-fluid" id="jumbo">
                     <div class="container">
-                        <header class="display-4">Portfolio</header>
+                        <header class="display-4" style="font-family: 'Georgia', Times, Times New Roman, serif; color: #4aaaa5; font-size: xx-large;">Portfolio</header>
                     </div>
-                    <hr class="m-3"></hr>
+                    <hr class="m-3" style="color: #dddddd;">
                     <div class="row">
                         <div class="col-4">
                           <div class="card" style="width: 100%; margin-left: 10%; margin-bottom: 20%">
