--- a/Module-1_Assessment/contact.html
+++ b/Module-1_Assessment/contact.html
@@ -17,8 +17,8 @@
         </div>
         <div class="col-sm-6 xs-12">
           <nav class="navbar border-bottom p-0 m-0">
-            <div class="font-weight-bolder">
-              <h1 class="navbar-brand" style="background-color: #4aaaa5; color: white; font-family: 'Georgia', Times, Times New Roman, serif; padding: 10%; font-size: x-large;">Derrick Johnson</h1>
+            <div class="logo">
+              <h1 class="navbar-brand" style="color: white; font-family: 'Georgia', Times, Times New Roman, serif; font-size: x-large;">Derrick Johnson</h1>
             </div>
             <div>
               <ul class="nav justify-content-end">
