--- a/Module-2_Assessment/index.html
+++ b/Module-2_Assessment/index.html
@@ -20,28 +20,40 @@
 
     <div class="container">
         <div class="row">
-            <h2 class="text-center" id="lastWord"></h2>
+            <h2 id="lastWord"></h2>
         </div>
 
         <div class="row">
             <div class="col" id="wordImage">
                 <img class="img-responsive" src="assets/images/twins1.png" alt="twins.png">
             </div>
-            <div class="col text-center main-content">
+            <div class="col main-content" style="text-align: center;">
                 <div class="row">
                     <h3 id="start">Press any key to get started!</h3>
                 </div>
                 <div class="row">
-                    <h3 id="wins">Wins</h3>
+                    <h3>Wins: </h3>
                 </div>
                 <div class="row">
-                    <h3 id="currentWord">Current Word</h3>
+                    <h3 id="wins"></h3>
                 </div>
                 <div class="row">
-                    <h3 id="remainingGuesses">Number of Guesses Remaining</h3>
+                    <h3>Current Word</h3>
+                </div>
+                <div class="row">  
+                    <h3 id="currentWord"></h3>
                 </div>
                 <div class="row">
-                    <h3 id="lettersGuessed">Letters Already Guessed</h3>
+                    <h3>Number of Guesses Remaining</h3>
+                </div>    
+                <div class="row">    
+                    <h3 id="remainingGuesses"></h3>
+                </div>
+                <div class="row">
+                    <h3>Letters Already Guessed</h3>
+                </div>    
+                <div class="row">
+                    <h3 id="lettersGuessed"></h3>
                 </div>
             </div>
         </div>
